fix: 🐛 menu not overlapping the cover

--- a/css/style.css
+++ b/css/style.css
@@ -211,6 +211,7 @@ body {
 #menu {
   width: 100%;
   border-radius: 40px 40px 0 0;
+  background-color: #eee;
   position: relative;
   top: -40px;
   padding: 15px;
