--- a/scss/pages/_menu.scss
+++ b/scss/pages/_menu.scss
@@ -16,6 +16,7 @@ body {
 #menu {
     width: 100%;
     border-radius: 40px 40px 0 0;
+    background-color: $grey-background;
     position: relative;
     top: -40px;
     padding: 15px;
